dapr-distributed-calendar/prometheus/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-aws-ingress
  namespace: observability
spec:
  ingressClassName: nginx-class
  rules:
    - host: prometheus.mtheuermann.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-kube-prometheus-prometheus
              port:
                number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-aws-ingress
  namespace: observability
spec:
  ingressClassName: nginx-class
  rules:
    - host: grafana.mtheuermann.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-grafana
              port:
                number: 80
